[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.cw1-subkeys]
codegen-units = 1
incremental = false

[profile.release.package.cw1-whitelist]
codegen-units = 1
incremental = false

[profile.release.package.cw3-fixed-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw3-flex-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw4-group]
codegen-units = 1
incremental = false

[profile.release.package.cw4-stake]
codegen-units = 1
incremental = false

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release.package.cw20-ics20]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-std = { git = "https://github.com/dzmitry-lahoda-forks/cosmwasm", rev = "1277597cbf380a8d04dbe676d9cb344ca31634b6", default-features = false, features = [
  "iterator",
  "cosmwasm_1_2",
] }
schemars = { version = "0.8.12" }
cosmwasm-schema = { version = "1.2.6"}
serde = { version = "1.0.103", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "1.0.38", package = "thiserror-core", default-features = false }
cw-storage-plus = { git = "https://github.com/dzmitry-lahoda-forks/cw-storage-plus/", rev="d0a2cf126cae3e3960c787ebcfc9baa54f59f71c", default-features= false, features = ["iterator"]}