[workspace]
members = ["packages/*", "contracts/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "2.0.0"

[workspace.dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std = "2.0.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.4"

cw1 = { path = "packages/cw1", version = "2.0.0-rc.0" }
cw1-whitelist = { path = "contracts/cw1-whitelist", version = "2.0.0-rc.0", features = [
    "library",
] }
cw20 = { path = "packages/cw20", version = "2.0.0-rc.0" }
cw20-base = { path = "contracts/cw20-base", version = "2.0.0-rc.0", features = ["library"] }
cw3 = { path = "packages/cw3", version = "2.0.0-rc.0" }
cw3-fixed-multisig = { path = "contracts/cw3-fixed-multisig", version = "2.0.0-rc.0", features = [
    "library",
] }
cw4 = { path = "packages/cw4", version = "2.0.0-rc.0" }
cw4-group = { path = "contracts/cw4-group", version = "2.0.0-rc.0" }
easy-addr = { path = "packages/easy-addr" }

[profile.release.package.cw1-subkeys]
codegen-units = 1
incremental = false

[profile.release.package.cw1-whitelist]
codegen-units = 1
incremental = false

[profile.release.package.cw3-fixed-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw3-flex-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw4-group]
codegen-units = 1
incremental = false

[profile.release.package.cw4-stake]
codegen-units = 1
incremental = false

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release.package.cw20-ics20]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
