[package]
name = "cw1-general"
version = "1.0.0"
authors = ["Skip"]
edition = "2021"
description = "Implementation of a proxy contract that can be called by anyone"
license = "TBD"
repository = "https://github.com/skip-mev/cw-plus"
homepage = "https://skip.money"
documentation = "https://docs.skip.money"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw1             = { path = "../../packages/cw1", version = "1.1.0" }
cw2             = { path = "../../packages/cw2", version = "1.1.0" }
cosmwasm-std    = { version = "1.2" }
schemars        = "0.8.1"
serde           = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.23" }