[package]
name = "cw1-subkeys"
version.workspace = true
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implement subkeys for authorizing native tokens as a cw1 proxy contract"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw1 = { workspace = true }
cw2 = { workspace = true }
cw1-whitelist = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
cw1-whitelist = { workspace = true, features = [
  "library",
  "test-utils",
] }
easy-addr = { path = "../../packages/easy-addr" }
