[package]
name = "cw1-subkeys"
version = "1.1.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implement subkeys for authorizing native tokens as a cw1 proxy contract"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = "2.0.0-rc.1"
cw-utils = "2.0.0-rc.0"
cw1 = { workspace = true }
cw2 = "2.0.0-rc.0"
cw1-whitelist = { workspace = true }
cosmwasm-std = { version = "2.0.0-rc.1", features = ["staking"] }
cw-storage-plus = "2.0.0-rc.0"
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
cw1-whitelist = { workspace = true, features = [
  "library",
  "test-utils",
] }
easy-addr = { path = "../../packages/easy-addr" }
