[package]
name = "cw1-whitelist-ng"
version = "0.10.1"
authors = ["Bartłomiej Kuras <bartk@confio.gmbh>"]
edition = "2018"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []
querier = ["library"]
# generate multitest interfaces
multitest = ["cw-multi-test", "anyhow"]

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.10.1" }
cw1 = { path = "../../packages/cw1", version = "0.10.1" }
cw2 = { path = "../../packages/cw2", version = "0.10.1" }
cosmwasm-std = { version = "1.0.0-beta", features = ["staking"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.10.1", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.10.1" }
derivative = "2"
