[package]
name = "cw1-whitelist"
version = "1.1.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { version = "2.0.0-rc.1" }
cw-utils = "1.0.1"
cw1 = { path = "../../packages/cw1", version = "1.1.2" }
cw2 = "2.0.0-rc.0"
cosmwasm-std = { version = "2.0.0-rc.1", features = ["staking"] }
cw-storage-plus = "2.0.0-rc.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = "0.16.5"
derivative = "2"
