[package]
name = "cw1-whitelist"
version = "1.1.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = "2.0.0-rc.1"
cw-utils = "2.0.0-rc.0"
cw1 = { workspace = true }
cw2 = "2.0.0-rc.0"
cosmwasm-std = { version = "2.0.0-rc.1", features = ["staking"] }
cw-storage-plus = "2.0.0-rc.0"
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
# temporary
cw-multi-test = "2.0.0-rc.0"
derivative = "2"
easy-addr = { path = "../../packages/easy-addr" }
