[package]
name = "cw1155-base"
version = "0.6.0-alpha1"
authors = ["Huang Yi <huang@crypto.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-1155 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { path = "../../packages/cw2", version = "0.6.0-alpha1" }
cw1155 = { path = "../../packages/cw1155", version = "0.6.0-alpha1" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.6.0-alpha1" , features = ["iterator"]}
cosmwasm-std = { version = "0.14.0-beta1", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0-alpha2" }
