[package]
name = "cw1155-base"
version = "0.16.0"
authors = ["Huang Yi <huang@crypto.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-1155 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = { path = "../../packages/utils", version = "0.16.0" }
cw2 = { path = "../../packages/cw2", version = "0.16.0" }
cw1155 = { path = "../../packages/cw1155", version = "0.16.0" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.16.0" }
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
