[package]
name = "cw20-atomic-swap"
version = "0.11.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of Atomic Swaps"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
utils = { path = "../../packages/utils", version = "0.11.0" }
cw2 = { path = "../../packages/cw2", version = "0.11.0" }
cw20 = { path = "../../packages/cw20", version = "0.11.0" }
cosmwasm-std = { version = "1.0.0-beta3" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.11.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.3.1"
sha2 = "0.8.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }
