[package]
name = "cw20-base"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[feature]
default = ["std", "iterator"]
std = ["cw-utils/std", "cw20/std", "cw2/std", "cosmwasm-std/std", "cw-storage-plus/std"]
iterator = ["cw-storage-plus/iterator"]

[dependencies]
cosmwasm-schema = { workspace = true  }
cw-utils = { path = "../../packages/cw-utils" }
cw2 = { path = "../../packages/cw2"  }
cw20 = { path = "../../packages/cw20" }
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true  }
schemars = { workspace = true }
semver = "1"
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true  }

[dev-dependencies]
cw-multi-test = "0.16.1"
