[package]
name = "cw20-base"
version = "1.2.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
interface = ["dep:cw-orch"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.4.0" }
cw-utils = "1.0.1"
cw2 = { path = "../../packages/cw2" }
cw20 = { path = "../../packages/cw20" }
cw-storage-plus = "1.1.0"
cosmwasm-std = { version = "1.4.0" }
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw-orch = { version = "0.18.0", optional = true }

[dev-dependencies]
cw-multi-test = "0.16.5"
