[package]
name = "cw20-bonding"
version = "0.4.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement basic bonding curve to issue cw20 tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.4.1" }
cw2 = { path = "../../packages/cw2", version = "0.4.1" }
cw20 = { path = "../../packages/cw20", version = "0.4.1" }
cw20-base = { path = "../../contracts/cw20-base", version = "0.4.1", features = ["library"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.4.1" }
cosmwasm-std = { version = "0.12.2", features = ["staking"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
rust_decimal = { version = "1.8.1" }
num-integer = { version = "0.1.44" }

[dev-dependencies]
cosmwasm-schema = { version = "0.12.2" }
