[package]
name = "cw20-bonding"
version = "0.7.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement basic bonding curve to issue cw20 tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.7.0" }
cw2 = { path = "../../packages/cw2", version = "0.7.0" }
cw20 = { path = "../../packages/cw20", version = "0.7.0" }
cw20-base = { path = "../../contracts/cw20-base", version = "0.7.0", features = ["library"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.7.0" }
cosmwasm-std = { version = "0.16.0-rc4", default-features = false, features = ["staking"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
rust_decimal = { version = "1.14.3" }
integer-sqrt = { version = "0.1.5" }
integer-cbrt = { version = "0.1.2" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0-rc4" }
