[package]
name = "cw20-escrow"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { path = "../../packages/cw20", version = "0.1.0" }
cosmwasm-std = { version = "0.9.0-alpha3" }
cosmwasm-storage = { version = "0.9.0-alpha3" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
cosmwasm-schema = { version = "0.9.0-alpha3" }
