[package]
name = "cw20-escrow"
version = "0.4.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of an escrow that accepts CosmWasm-20 tokens as well as native tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.4.0" }
cw2 = { path = "../../packages/cw2", version = "0.4.0" }
cw20 = { path = "../../packages/cw20", version = "0.4.0" }
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "derive-entry-point", features = ["iterator"] }
cosmwasm-storage = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "derive-entry-point", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "derive-entry-point" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.4.0" }
cw20-base = { path = "../cw20-base", version = "0.4.0", features = ["library"] }
