[package]
name = "cw20-ics20"
version = "1.1.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = "2.0.0-rc.1"
cw-utils = "2.0.0-rc.0"
cw2 = "2.0.0-rc.0"
cw20 = { path = "../../packages/cw20", version = "1.1.2" }
cosmwasm-std = { version = "2.0.0-rc.1", features = ["stargate"] }
cw-storage-plus = "2.0.0-rc.0"
cw-controllers = "2.0.0-rc.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]
easy-addr = { path = "../../packages/easy-addr" }
