[package]
name = "cw20-reward"
version = "3.0.0"
authors = ["MSNTCS <mohammad@terra.money>", "zl00ba<orkun@deuslabs.fi>"]
edition = "2018"
description= "cw20 reward distribution smart contract based on stake"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus/contracts/cw20-reward"
exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.10.0" }
cw20 = { path = "../../packages/cw20", version = "0.10.0" }
cosmwasm-std = { version = "1.0.0-beta", features = ["iterator"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.0", features = ["iterator"]}
cw-controllers = { path = "../../packages/controllers", version = "0.10.0"}
cw-multi-test = { path = "../../packages/multi-test", version = "0.10.0"}
schemars = "0.8.3"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta", default-features = false }
cw20-base = "0.10.0"
