[package]
name = "cw20-staking"
version = "0.2.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement simple staking derivatives as a cw20 token"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { path = "../../packages/cw2", version = "0.2.0" }
cw20 = { path = "../../packages/cw20", version = "0.2.0" }
cw20-base = { path = "../../contracts/cw20-base", version = "0.2.0", features = ["library"] }
cosmwasm-std = { version = "0.10.1", features = ["staking"] }
cosmwasm-storage = { version = "0.10.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }
