[package]
name = "cw2981-base"
version = "0.8.1"
authors = ["Alex Lynham <alex@lynh.am>"]
edition = "2018"
description = "Basic implementation of royalties for cw721 NFTs with token level royalties"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.8.1" }
cw2 = { path = "../../packages/cw2", version = "0.8.1" }
cw721 = { path = "../../packages/cw721", version = "0.8.1" }
cw721-base = { path = "../../contracts/cw721-base", version = "0.8.1", features = ["library"] }
cw2981 = { path = "../../packages/cw2981", version = "0.8.1" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.8.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
percentage = { version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
